Changed background colour to black and adjusted hero image to prevent nav bar overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,13 @@
     margin: 0;
     padding: 0;
     border: none;
-    background-color: white;
+    background-color: black;
+
 }
 
 body {
     font-family: 'Fjalla One', sans-serif;
-    color: black;
+    color: white;
 }
 
 h1,
@@ -54,9 +55,14 @@ h2 {
     border-bottom: 1px solid;
 }
 
+#hero-outer {
+    height: 800px;
+    width: 100%;
+    overflow: hidden;
+}
+
 #hero-image {
     height: 800px;
     width: 100%;
     background: url(../images/pexels-rodnae-productions-7915493.jpg) no-repeat center center;
 }
-
